Prevent admin heading from overflowing. Fix naming mismatch for Brandon Grotesque Light typeface.

--- a/public/styles/admin.less
+++ b/public/styles/admin.less
@@ -32,6 +32,7 @@ a {
 	header {
 		display        : inline-block;
 		margin-top     : 28px;
+		margin-right   : -10px;
 		position       : relative;
 		text-transform : uppercase;
 
