--- a/public/styles/fonts.less
+++ b/public/styles/fonts.less
@@ -27,8 +27,8 @@
 }
 
 @font-face {
-    font-family : 'Brandon Grotesque';
+    font-family : 'Brandon Grotesque Light';
     src         : url('../fonts/brandon_light.woff') format('woff');
-    font-weight : 300;
+    font-weight : normal;
     font-style  : normal;
 }
